# vic-royale-engine

./: CMakeLists.txt  LICENSE  Makefile  README.md  board_test  chess  chess_engine
python_gui/: main.py
src/: a.out  bitboard.cpp  bitboard.h  board.cpp  board.h  board_test  chess  fen.cpp  fen.h  main.cpp  test_board
